[front] fix to message to long overflow and surplus profiles not removing

--- a/front/src/app/profile-view/chat/chat.scss
+++ b/front/src/app/profile-view/chat/chat.scss
@@ -34,6 +34,7 @@
   padding: 1em;
   border-radius: v.$border-radius-default;
   background: v.$secondary-bg-color;
+  word-break: break-word;
 }
 
 .received{
